--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,12 @@
 <app-header></app-header>
-<app-main-screen></app-main-screen>
-<app-services></app-services>
-<app-manifesto></app-manifesto>
-<app-works></app-works>
-<app-customers></app-customers>
-<app-statistics></app-statistics>
-<app-form></app-form>
+<app-merch></app-merch>
+<!--<app-main-screen></app-main-screen>-->
+<!--<app-services></app-services>-->
+<!--<app-manifesto></app-manifesto>-->
+<!--<app-works></app-works>-->
+<!--<app-customers></app-customers>-->
+<!--<app-statistics></app-statistics>-->
+<!--<app-form></app-form>-->
 
 
 
