--- a/src/styles.scss
+++ b/src/styles.scss
@@ -188,3 +188,14 @@ img {
     font-style: italic;
   }
 }
+
+.bottom-container {
+  position: absolute;
+  bottom: 42px;
+  left: 75px;
+
+  .circles {
+    width: 80px;
+    height: 20px;
+  }
+}
