--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,15 @@
 <div class="header w-100">
   <div class="header-container d-flex a-i-start j-c-space-between">
-    <div class="logo">
+    <a routerLink="/" class="logo">
       брейнстор
       <div class="sub-logo">ТМ</div>
-    </div>
+    </a>
     <div class="d-flex a-i-center gap-15 menu-item">
       <div>Услуги</div>
       <div>Работы</div>
       <div>Контакты</div>
       <div>Команда</div>
-      <div>Стор</div>
+      <a routerLink="/merch">Стор</a>
     </div>
   </div>
 </div>
