--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -5,7 +5,7 @@
       <div class="service" *ngFor="let service of slide.services">{{service.service}}</div>
     </div>
     <div class="text-gray">
-      <a routerLink="/projects/1" class="text-black">{{slide.company}}</a>
+      <a routerLink="/projects" class="text-black">{{slide.company}}</a>
       {{slide.description}}
     </div>
   </div>
