--- a/src/app/components/project-content/project-content.component.html
+++ b/src/app/components/project-content/project-content.component.html
@@ -1,10 +1,26 @@
 <div class="d-flex w-100 card-content">
-  <div class="card-content-container d-flex direction-column a-i-start">
-    <div class="text-title w-80 mb-70"><span>ИНБРИГ — Строительная компания,</span> которая возводит частные дома из
-      камня по всему Татарстану
+  <div class="card-content-container d-flex direction-column a-i-start w-100">
+    <markdown class="text-title w-80 mb-70" [data]="project.title"></markdown>
+    <div class="d-flex direction-row flex-wrap w-100 gap-10 mb-400">
+      <div class="service" *ngFor="let service of project.services">{{service.service}}</div>
     </div>
-    <div class="d-flex direction-row flex-wrap w-100">
-
+    <div class="text-gray mb-50">Задача</div>
+    <markdown class="text-black mb-80" [data]="project.tasks"></markdown>
+    <img [src]="project.img_main" alt="picture" class="mb-400 w-94"/>
+    <div class="text-gray mb-50">Что мы сделали</div>
+    <markdown class="text-black mb-80" [data]="project.results"></markdown>
+    <img [src]="project.img_results" alt="picture" class="mb-300 w-70"/>
+    <div class="text-gray mb-50">Исследование</div>
+    <div class="text-black mb-80 w-50">{{project.research}}</div>
+    <img [src]="project.img_research" alt="picture" class="mb-300 w-70"/>
+    <app-statistics class="mb-300 ml5"></app-statistics>
+    <div class="text-gray mb-50">Нейминг</div>
+    <div class="text-black mb-80 w-50">{{project.naming}}</div>
+    <img [src]="project.img_naming" alt="picture" class="mb-60 w-94"/>
+    <div class="d-flex direction-row flex-wrap w-100 gap-10 mb-400">
+      <div class="service" *ngFor="let service of project.services">{{service.service}}</div>
     </div>
+    <app-works class="mb-400 ml7"></app-works>
+    <app-form class="ml5"></app-form>
   </div>
 </div>
