--- a/src/app/components/project-content/project-content.component.scss
+++ b/src/app/components/project-content/project-content.component.scss
@@ -3,10 +3,49 @@
   background-color: white;
 
   .card-content-container {
-    padding-left: 42px;
+    padding: 250px 0 0 75px;
 
     .mb-70 {
       margin-bottom: 70px;
+    }
+
+    .mb-80 {
+      margin-bottom: 80px;
+    }
+
+    .w-94 {
+      width: 94%;
+    }
+
+    .w-70 {
+      width: 70%;
+    }
+
+    .ml5 {
+      margin-left: -5%;
+    }
+
+    .ml7 {
+      margin-left: -7%;
+    }
+
+    .service {
+      font-size: 44px;
+      font-weight: 400;
+      line-height: 54px;
+      letter-spacing: 0.5px;
+      color: black;
+      padding: 25px 80px;
+      border-radius: 160px;
+      background-color: #E9E9E9B2;
+    }
+
+    .mb-400 {
+      margin-bottom: 400px;
+    }
+
+    .mb-300 {
+      margin-bottom: 300px;
     }
   }
 }
