--- a/src/app/pages/components/works/works.component.html
+++ b/src/app/pages/components/works/works.component.html
@@ -1,6 +1,9 @@
 <div class="w-100 background-white">
   <div class="d-flex direction-column container">
-    <h2 class="mb-60">Работы</h2>
+    <div class="w-100 d-flex j-c-space-between a-i-center">
+      <h2 class="mb-60">Работы</h2>
+      <div class="text-black">Все работы</div>
+    </div>
     <app-slider></app-slider>
   </div>
 </div>
