--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar {
-  //width: 0;
+  width: 0;
 }
 
 body {
@@ -49,6 +49,13 @@ input {
     outline: none;
     text-decoration: none;
   }
+}
+
+ul {
+  list-style: none;
+  padding-inline-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 img {
@@ -203,7 +210,6 @@ img {
 .merch {
   position: relative;
   border-radius: 50px;
-  height: 100vh;
   width: 100%;
   z-index: 999;
   overflow: auto;
