--- a/src/app/pages/components/main-screen/main-screen.component.html
+++ b/src/app/pages/components/main-screen/main-screen.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="content w-100 d-flex a-i-center j-c-center">
   <div class="w-100 h-100 d-flex a-i-center j-c-center border">
-    <img src="images/biglogo.svg" alt="logo" class="w-50 mb-50"/>
+    <img src="images/biglogo.svg" alt="logo" class="mb-50 logo"/>
     <div class="bottom-container d-flex direction-column j-c-start gap-10">
       <img src="images/circles.svg" class="circles" alt="icon"/>
       <div class="text-title">Brainstore — креативное агенство
