--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -1,5 +1,5 @@
 <div class="merch">
-  <div class="border"></div>
+  <div class="border" *ngIf="!isMobile"></div>
   <div class="team-content w-100 d-flex">
     <div class="d-flex direction-column a-i-start w-100 team-content-container">
       <div class="text-title w-80 mb-400">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
@@ -10,11 +10,12 @@
         hellobrainstore.agency
       </div>
       <img src="images/contacts.png" alt="picture" class="mb-60 w-94"/>
-      <div class="text-gray w-50 mb-400">Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед Попов, Серега
+      <div class="text-gray w-50 mb-400 mobile-margin">Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед
+        Попов, Серега
         Федотов, Ксения Хозяева, Александ Калугин, Валиахмед Попов, Ксения Хозяева
       </div>
       <app-manifesto class="mb-200 ml5"></app-manifesto>
-      <app-works class="mb-400 ml7"></app-works>
+      <app-works class="mb-400 ml7 mobile-margin"></app-works>
       <app-form class="ml5"></app-form>
     </div>
   </div>
