--- a/src/app/pages/merch/merch.component.html
+++ b/src/app/pages/merch/merch.component.html
@@ -1,7 +1,7 @@
 <div class="merch">
   <app-merch-content></app-merch-content>
-  <div class="border"></div>
-  <div class="text-title fixed">
+  <div class="border" *ngIf="!isMobile"></div>
+  <div class="text-title fixed" *ngIf="!isMobile">
     <span>Мерч для созидателей,</span> художников, дизайнеров и стратегов
   </div>
 </div>
