--- a/src/app/pages/project/project.component.html
+++ b/src/app/pages/project/project.component.html
@@ -1,4 +1,4 @@
 <div class="merch">
   <app-project-content></app-project-content>
-  <div class="border"></div>
+  <div class="border" *ngIf="!isMobile"></div>
 </div>
