--- a/src/app/components/project-content/project-content.component.html
+++ b/src/app/components/project-content/project-content.component.html
@@ -1,8 +1,10 @@
 <div class="d-flex w-100 card-content">
   <div class="card-content-container d-flex direction-column a-i-start w-100">
     <markdown class="text-title w-80 mb-70" [data]="project.title"></markdown>
-    <div class="d-flex direction-row flex-wrap w-100 gap-10 mb-400">
-      <div class="service" *ngFor="let service of project.services">{{service.service}}</div>
+    <div *ngIf="isMobile" class="container-slider">
+      <div class="d-flex direction-row flex-wrap w-100 gap-10 mb-400">
+        <div class="service" *ngFor="let service of project.services">{{service.service}}</div>
+      </div>
     </div>
     <div class="text-gray mb-50">Задача</div>
     <markdown class="text-black mb-80" [data]="project.tasks"></markdown>
