--- a/src/app/pages/components/customers/customers.component.scss
+++ b/src/app/pages/components/customers/customers.component.scss
@@ -6,6 +6,10 @@
   border-left: 1px solid black;
 }
 
+.h-760 {
+  height: 760px;
+}
+
 img {
   max-width: 380px;
 }
@@ -30,6 +34,10 @@ img {
   }
 }
 
+.ml-40 {
+  margin-left: 40px;
+}
+
 .gap-60 {
   gap: 60px;
 }
@@ -47,3 +55,50 @@ img {
   display: none;
 }
 
+@media (max-width: 999px) {
+
+  .padding {
+    padding: 160px 0 170px;
+  }
+
+  .company {
+    font-size: 15px;
+    line-height: 16px;
+    letter-spacing: 0.5px;
+    padding: 15px 24px;
+    border-radius: 48px;
+  }
+
+  .mb-60 {
+    margin-bottom: 20px;
+  }
+
+  .gap-10 {
+    gap: 5px;
+  }
+
+  .ml-40 {
+    margin-left: 20px;
+  }
+
+  .h-760 {
+    height: 540px;
+  }
+
+  .description {
+    margin-left: 20px;
+  }
+
+  img {
+    max-width: 170px;
+  }
+
+  .gap-60 {
+    gap: 20px;
+  }
+
+  .text-gray, .text-black {
+    font-size: 15px;
+    line-height: 20px;
+  }
+}
