--- a/src/app/pages/components/form/form.component.html
+++ b/src/app/pages/components/form/form.component.html
@@ -1,11 +1,11 @@
 <div class="w-100 background-white">
   <div class="container d-flex padding j-c-space-between">
-    <div class="d-flex direction-column j-c-space-between" style="height: 936px">
+    <div class="d-flex direction-column j-c-space-between h-936">
       <div class="text-title w-80">Напишите нам сообщение —
-        <span>это будет круто</span>
+        <span>это будет круто!</span>
       </div>
-      <div class="d-flex direction-column gap-30">
-        <img src="images/logo-black.svg" alt="logo" style="width: 400px"/>
+      <div class="d-flex direction-column gap-30" *ngIf="!isMobile">
+        <img src="images/logo-black.svg" alt="logo" class="logo"/>
         <div class="text-black d-flex direction-column">
           <span>+7 (843) 251-99-99</span>
           <span>brainstore.com</span>
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div>
-    <form class="d-flex direction-column gap-50 w-45" style="margin-top: 40px">
+    <form class="d-flex direction-column gap-50 w-45 mt-40">
       <div class="form-item d-flex direction-row a-i-center gap-15">
         <label class="text-black">Имя</label>
         <input/>
@@ -38,10 +38,25 @@
         <textarea placeholder="Здравствуйте, я только спросить..."></textarea>
       </div>
       <div class="d-flex direction-row gap-15 a-i-center">
-        <img src="images/dot.svg" alt="icon" style="width: 36px; height: 36px"/>
-        <div>Я соглашаюсь с условиями обработки персональных данных</div>
+        <img src="images/dot.svg" alt="icon" class="dot"/>
+        <div class="min-text">Я соглашаюсь с условиями обработки персональных данных</div>
       </div>
       <button class="btn w-100">Отправить</button>
     </form>
+    <div class="d-flex direction-column gap-30" *ngIf="isMobile">
+      <img src="images/logo-black.svg" alt="logo" class="logo"/>
+      <div class="text-black d-flex direction-column">
+        <span>+7 (843) 251-99-99</span>
+        <span>brainstore.com</span>
+      </div>
+      <div class="text-black d-flex direction-column">
+        <span>Telegram</span>
+        <span>VK</span>
+      </div>
+      <div class="d-flex direction-column">
+        <span class="text-black">© 2024 Brainstore</span>
+        <span class="text-gray">Казань, Университетская, 20 / Москва, Лубянский проезд 19с1</span>
+      </div>
+    </div>
   </div>
 </div>
