--- a/src/app/pages/components/main-screen/main-screen.component.scss
+++ b/src/app/pages/components/main-screen/main-screen.component.scss
@@ -27,5 +27,42 @@ video {
     margin-left: 42px;
     height: calc(100% - 84px);
   }
+
+  .logo {
+    width: 50%;
+  }
+}
+
+@media (max-width: 999px) {
+
+  .content {
+    color: white;
+    backdrop-filter: blur(40px);
+    position: relative;
+    height: 100vh;
+
+    .border {
+      border-left: none;
+      margin-left: 0;
+      height: 0;
+    }
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 999px) {
+
+  .logo {
+    width: 65%;
+  }
+
+}
+
+@media (min-width: 370px) and (max-width: 767px) {
+
+  .logo {
+    width: 80%;
+  }
+
 }
 
