--- a/src/app/pages/components/manifesto/manifesto.component.scss
+++ b/src/app/pages/components/manifesto/manifesto.component.scss
@@ -6,3 +6,14 @@
   padding-top: 511px;
   padding-bottom: 217px;
 }
+
+@media (max-width: 999px) {
+  .padding {
+    padding-top: 160px;
+    padding-bottom: 80px;
+  }
+
+  .w-95 {
+    width: 80%;
+  }
+}
