--- a/src/app/pages/components/statistics/statistics.component.scss
+++ b/src/app/pages/components/statistics/statistics.component.scss
@@ -13,3 +13,34 @@
     width: 70%;
   }
 }
+
+@media (max-width: 999px) {
+  .background-white {
+    .container {
+      .mb-60 {
+        margin-bottom: 40px;
+      }
+
+      .direction-row {
+        flex-direction: column;
+        gap: 20px;
+
+        .section {
+          padding: 50px 0 15px 20px;
+
+          .mb-50 {
+            margin-bottom: 12px;
+          }
+
+          .count {
+            font-size: 75px;
+            line-height: 53px;
+            letter-spacing: -2.5px;
+          }
+        }
+      }
+    }
+  }
+
+
+}
