--- a/src/app/components/merch-content/merch-content.component.scss
+++ b/src/app/components/merch-content/merch-content.component.scss
@@ -70,3 +70,24 @@
   }
 }
 
+@media (min-width: 1000px) and (max-width: 1450px) {
+  .merch-content {
+
+    .merch-item {
+
+      .merch-img {
+        width: 50%;
+        margin-bottom: 20px;
+      }
+
+      .sub-text-img {
+        margin-bottom: 10px;
+        font-size: 14px;
+        letter-spacing: 0.25px;
+        line-height: 17px;
+      }
+
+    }
+  }
+}
+
