--- a/src/app/pages/components/works/works.component.scss
+++ b/src/app/pages/components/works/works.component.scss
@@ -1,3 +1,12 @@
-.mb-60 {
-  margin-bottom: 20px;
+@media (min-width: 370px) and (max-width: 999px) {
+  .mb-60 {
+    margin-bottom: 20px;
+  }
 }
+
+@media (min-width: 1000px) and (max-width: 1450px) {
+  .mb-60 {
+    margin-bottom: 30px;
+  }
+}
+
