--- a/src/app/pages/team/team.component.scss
+++ b/src/app/pages/team/team.component.scss
@@ -37,8 +37,6 @@
 
 @media (max-width: 999px) {
   .team-content {
-    color: black;
-    background-color: white;
 
     .team-content-container {
       padding: 150px 0 0 20px;
@@ -78,6 +76,59 @@
 
       .ml7 {
         margin-left: -7%;
+      }
+    }
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1450px) {
+  .team-content {
+
+    .w-80 {
+      width: 60%;
+    }
+
+    .team-content-container {
+      padding: 250px 0 0 75px;
+
+      .mb-60 {
+        margin-bottom: 30px;
+      }
+
+      .mb-80 {
+        margin-bottom: 20px;
+      }
+
+      .mb-400 {
+        margin-bottom: 250px;
+      }
+
+      .w-50 {
+        width: 35%;
+      }
+
+      .text-gray {
+        font-size: 17px;
+        line-height: 22px;
+        width: 70%;
+        margin-bottom: 0;
+      }
+
+      .mobile-margin {
+        margin-bottom: 0;
+      }
+
+      .mb-200 {
+        margin-bottom: 0;
+      }
+
+      .ml5 {
+        margin-left: -5%;
+      }
+
+      .ml7 {
+        margin-left: -7%;
+        margin-bottom: 0;
       }
     }
   }
