--- a/src/styles.scss
+++ b/src/styles.scss
@@ -275,45 +275,56 @@ img {
   }
 }
 
-@media (min-width: 1000px) and (max-width: 1400px) {
+@media (min-width: 1000px) and (max-width: 1450px) {
   .bottom-container {
+    width: 70%;
     position: absolute;
     bottom: 42px;
     left: 75px;
 
     .circles {
-      width: 60px;
-      height: 15px;
+      width: 40px;
+      height: 10px;
     }
   }
 
   .text-title {
-    font-size: 45px;
-    line-height: 40px;
-    letter-spacing: 0;
+    font-size: 40px;
+    line-height: 42px;
+    letter-spacing: -1px;
   }
 
   h2 {
-    font-size: 60px;
-    line-height: 20px;
-    letter-spacing: -0.5px;
+    font-size: 45px;
+    line-height: 40px;
+    letter-spacing: -1px;
   }
 
   .text-black {
-    font-size: 25px;
-    line-height: 30px;
-  }
-
-  .text-gray {
-    font-size: 18px;
+    font-size: 17px;
     line-height: 22px;
   }
 
+  .text-gray {
+    font-size: 12px;
+    line-height: 17px;
+  }
+}
+
+@media (min-width: 370px) and (max-width: 999px) {
   .merch {
     border-radius: 0;
 
     .border {
       display: none;
+    }
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1450px) {
+  .merch {
+    .fixed {
+      width: 50%;
     }
   }
 }
