--- a/src/app/pages/components/statistics/statistics.component.scss
+++ b/src/app/pages/components/statistics/statistics.component.scss
@@ -1,8 +1,9 @@
 .section {
   border-left: 1px solid black;
-  padding: 96px 38px 0 26px;
+  padding: 96px 0 0 26px;
 
   .count {
+    font-family: 'ABCFavoritCYR';
     font-weight: 900;
     font-size: 170px;
     line-height: 85px;
@@ -26,7 +27,7 @@
         gap: 20px;
 
         .section {
-          padding: 50px 0 15px 20px;
+          padding: 50px 0 0 20px;
 
           .mb-50 {
             margin-bottom: 12px;
@@ -61,7 +62,7 @@
         gap: 20px;
 
         .section {
-          padding: 50px 0 15px 20px;
+          padding: 50px 0 0 20px;
 
           .mb-50 {
             margin-bottom: 25px;
