--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,14 +2,60 @@
   width: 0;
 }
 
+body, html, .video-background {
+  border-radius: 50px;
+  //position: fixed;
+  //height: 100vh;
+  //width: 100%;
+  //z-index: 999;
+  overflow: auto;
+}
+
+@media (max-width: 999px) {
+  body, html, .video-background {
+    border-radius: 0;
+  }
+}
+
+
+@font-face {
+  font-family: 'ABCFavoritCYR';
+  src: url('/fonts/ABCFavoritCYR-Ultra.otf') format('opentype'),
+  url('/fonts/ABCFavoritCYR-Ultra.otf') format('opentype'),
+    //src: url('/fonts/suisseintl.eot'); /* IE 9 Compatibility Mode */
+    //src: url('/fonts/suisseintl.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+  url('/fonts/ABCFavoritCYR-Ultra.woff2') format('woff2'), /* Super Modern Browsers */
+  url('/fonts/ABCFavoritCYR-Ultra.woff') format('woff'); /* Firefox >= 3.6, any other modern browser */
+  //url('/fonts/suisseintl.ttf') format('truetype'), /* Safari, Android, iOS */
+  //url('/fonts/suisseintl.svg#suisseintl') format('svg'); /* Chrome < 4, Legacy iOS */
+}
+
+@font-face {
+  font-family: 'ABCFavoritCYRItalic';
+  src: url('/fonts/ABCFavoritCYR-UltraItalic.woff2') format('woff2'), /* Super Modern Browsers */
+  url('/fonts/ABCFavoritCYR-UltraItalic.woff') format('woff'); /* Firefox >= 3.6, any other modern browser */
+
+}
+
+@font-face {
+  font-family: 'WilliamTextLC';
+  src: url('/fonts/WilliamTextLC-Regular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'WilliamTextLCItalic';
+  src: url('/fonts/WilliamTextLC-RegularItalic') format('opentype');
+}
+
 body {
+  font-family: 'WilliamTextLC';
   background-color: black;
   overflow-x: hidden;
   margin: 0;
-  font-family: 'SuisseIntl', serif;
 }
 
 h2 {
+  font-family: 'ABCFavoritCYR';
   font-size: 90px;
   font-weight: 900;
   line-height: 80px;
@@ -192,6 +238,7 @@ img {
   letter-spacing: -2px;
 
   span {
+    font-family: 'WilliamTextLCItalic';
     font-style: italic;
   }
 }
@@ -208,13 +255,14 @@ img {
 }
 
 .merch {
-  position: relative;
-  border-radius: 50px;
-  width: 100%;
-  z-index: 999;
-  overflow: auto;
+  //position: relative;
+  //border-radius: 50px;
+  //width: 100%;
+  //z-index: 999;
+  //overflow: auto;
 
   .border {
+    mix-blend-mode: difference;
     width: 1%;
     border-left: 1px solid black;
     height: calc(100% - 84px);
