--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header w-100">
-  <div class="header-container d-flex a-i-start j-c-space-between">
+  <div class="header-container container d-flex a-i-start j-c-space-between">
     <a routerLink="/" class="logo">
       брейнстор
       <div class="sub-logo">ТМ</div>
