--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,14 +5,15 @@
   position: fixed;
 
   .header-container {
-    margin: 42px;
-    width: auto;
+    height: 0;
+    margin-top: 42px;
+    //width: auto;
 
     .logo {
       font-family: 'ABCFavoritCYRItalic';
       position: relative;
       margin-top: -20px;
-      margin-left: 36px;
+      //margin-left: 36px;
       font-weight: 900;
       font-size: 90px;
       font-style: italic;
@@ -41,8 +42,8 @@
   .header {
 
     .header-container {
-      margin: 30px 20px;
-      width: auto;
+      //margin: 30px 20px;
+      //width: auto;
 
       .logo {
         margin-left: 0;
@@ -63,8 +64,8 @@
   .header {
 
     .header-container {
-      margin: 30px 40px 0 75px;
-      width: auto;
+      //margin: 30px 40px 0 75px;
+      //width: auto;
 
       .menu-item {
         font-size: 17px;
