--- a/src/app/pages/components/customers/customers.component.html
+++ b/src/app/pages/components/customers/customers.component.html
@@ -3,10 +3,10 @@
     <h2 class="mb-60">Клиенты</h2>
     <div class="direction-column d-flex j-c-space-between border h-760">
       <div class="d-flex w-80 flex-wrap direction-row gap-10 ml-40">
-        <div class="company"
+        <a href="#" class="company"
              *ngFor="let customer of customers"
              (mouseenter)="showDescription(customer)"
-             (mouseleave)="hideDescription(customer)">{{customer.company}}</div>
+             (mouseleave)="hideDescription(customer)">{{customer.company}}</a>
       </div>
       <div class="description d-flex direction-column gap-60"
            *ngFor="let customer of customers"
