--- a/src/app/pages/components/form/form.component.scss
+++ b/src/app/pages/components/form/form.component.scss
@@ -188,3 +188,62 @@ textarea {
   }
 }
 
+@media (min-width: 1451px) and (max-width: 2000px) {
+  .padding {
+    padding-top: 370px;
+    padding-bottom: 40px;
+  }
+
+  .w-50 {
+    width: 35%;
+  }
+
+  .text-black, .text-gray {
+    font-size: 25px;
+    line-height: 30px;
+  }
+
+  textarea {
+    margin-top: 10px;
+    height: 140px;
+  }
+
+  .min-text {
+    font-size: 15px;
+    width: 50%;
+  }
+
+  .logo {
+    width: 210px;
+  }
+
+  .dot {
+    width: 18px;
+    height: 18px;
+  }
+
+  .mt-40 {
+    margin-top: 0;
+  }
+
+  .h-936 {
+    height: 660px;
+  }
+
+  .w-80 {
+    width: 70%;
+  }
+
+  .gap-30, .gap-50, .gap-15 {
+    gap: 30px;
+  }
+
+  .btn {
+    margin-top: 30px;
+    border-radius: 28px;
+    font-size: 20px;
+    line-height: 25px;
+    padding: 40px;
+  }
+}
+
