--- a/src/app/components/merch-content/merch-content.component.scss
+++ b/src/app/components/merch-content/merch-content.component.scss
@@ -91,3 +91,35 @@
   }
 }
 
+@media (min-width: 1451px) and (max-width: 2000px) {
+  .merch-content {
+
+    .merch-item {
+
+      padding-top: 300px;
+      padding-bottom: 170px;
+
+      .merch-img {
+        width: 70%;
+        margin-bottom: 23px;
+      }
+
+      .sub-text-img {
+        margin-bottom: 10px;
+        font-size: 20px;
+        letter-spacing: 0.25px;
+        line-height: 25px;
+
+        .tm {
+          position: absolute;
+          top: -10px;
+          right: -25px;
+          font-size: 12px;
+          font-weight: 400;
+          letter-spacing: 0.5px;
+        }
+      }
+
+    }
+  }
+}
