--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,6 @@
 
 body, html, .video-background {
   border-radius: 50px;
-  //position: fixed;
-  //height: 100vh;
-  //width: 100%;
-  //z-index: 999;
   overflow: auto;
 }
 
@@ -374,5 +370,36 @@ img {
     .fixed {
       width: 50%;
     }
+  }
+}
+
+@media (min-width: 1451px) and (max-width: 2000px) {
+  .bottom-container {
+    width: 70%;
+    position: absolute;
+    bottom: 42px;
+    left: 75px;
+
+    .circles {
+      width: 60px;
+      height: 15px;
+    }
+  }
+
+  .text-title {
+    font-size: 55px;
+    line-height: 60px;
+    letter-spacing: -1px;
+  }
+
+  h2 {
+    font-size: 60px;
+    line-height: 55px;
+    letter-spacing: -1px;
+  }
+
+  .text-black, .text-gray {
+    font-size: 25px;
+    line-height: 30px;
   }
 }
